--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.1</version>
     </dependency>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.2.10</version>
+    </dependency>
   </dependencies>
 
   <build>
